--- a/default.project.json
+++ b/default.project.json
@@ -5,18 +5,21 @@
 
     "ReplicatedStorage": {
       "$className": "ReplicatedStorage",
-      "$path": "src/ReplicatedStorage"
+      "$path": "src/ReplicatedStorage",
+      "$ignoreUnknownInstances": true
     },
 
     "ServerScriptService": {
       "$className": "ServerScriptService",
-      "$path": "src/ServerScriptService"
+      "$path": "src/ServerScriptService",
+      "$ignoreUnknownInstances": true
     },
 
     "StarterPlayer": {
       "StarterPlayerScripts": {
         "$className": "StarterPlayerScripts",
-          "$path": "src/StarterPlayerScripts"
+          "$path": "src/StarterPlayerScripts",
+          "$ignoreUnknownInstances": true
       }
     },
 
