updated project file to not delete instances from ServerStorage on Rojo connect

--- a/default.project.json
+++ b/default.project.json
@@ -15,6 +15,12 @@
       "$ignoreUnknownInstances": true
     },
 
+    "ServerStorage": {
+      "$className": "ServerStorage",
+      "$path": "src/ServerStorage",
+      "$ignoreUnknownInstances": true
+    },
+
     "StarterPlayer": {
       "StarterPlayerScripts": {
         "$className": "StarterPlayerScripts",
